# fastlio

./: .gitignore  CMakeLists.txt  package.xml
config/: fastlio.rviz  livox.yaml  robosense.yaml
include/: Pose6D.hpp  cloud_preprocess.hpp  common_lib.hpp  exp_mat.hpp  imu_processing.hpp  matplotlibcpp.hpp  so3_math.hpp  use-ikfom.hpp
include/IKFoM_toolkit/esekfom/: esekfom.hpp
include/IKFoM_toolkit/mtk/: build_manifold.hpp
include/IKFoM_toolkit/mtk/src/: SubManifold.hpp  mtkmath.hpp  vectview.hpp
include/IKFoM_toolkit/mtk/types/: S2.hpp  SOn.hpp  vect.hpp
launch/: mapping_livox.launch  mapping_robosense.launch
src/: cloud_preprocess.cpp  mapping.cpp
