<?xml version="1.0"?>
<package format="2">
  <name>fastlio</name>
  <version>0.0.0</version>

  <description>
    This is a modified version of LOAM which is original algorithm
    is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
    Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>

  <maintainer email="dev@livoxtech.com">claydergc</maintainer>

  <license>GPL-2</license>

  <author email="zhangji@cmu.edu">Ji Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>message_generation</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>
